Fixed content items status not fitting one line in Firefox

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
@@ -90,7 +90,7 @@
             padding-left: 0px;
 
             .dependant-item-viewer {
-              width: calc(~'100% - 80px');
+              width: calc(~'100% - 90px');
             }
 
             .names-and-icon-view .wrapper {
